# tesiraOSC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_macos.yml
include/: oscpack.cmake  websocketpp.cmake
src/: MainComponent.cpp  MainComponent.h  OPTIONS.h  Params.h  Routing.cpp  Routing.h  main.cpp
src/components/: Button.h  IPCStatus.h  NetStatus.h  Settings.h  SettingsButtons.h  SettingsOSC.h  SettingsPanel.h  SettingsTesira.h  TEMPLATE.h
src/components/base/: Button.h  IconButton.h  Label.h  Panel.h  PanelTitle.h  TextButton.h  Textbox.h  TextboxWithLabel.h
src/gui/: GlobalLAF.h  MenuBar.cpp  MenuBar.h  Tray.cpp  Tray.h
src/net/: IPC.cpp  IPC.h  IPC3.h  IPCConnection.cpp  IPCConnection.h  IPCServer.cpp  IPCServer.h  IPCws.cpp  IPCws.h  NetProcess.cpp  NetProcess.h  NetSocket.cpp  NetSocket.h  Network.cpp  Network.h  OSCWatch.cpp  OSCWatch.h  RoutingWrapper.cpp  RoutingWrapper.h  UDPSend.cpp  UDPSend.h
src/util/: colors.h  fonts.h  json.h
telnet/: COMMANDS.ts  Routing.ts  deno.json  main.ts  net.ts  sockets.ts  telnet.ts  tesira.ts  ws.ts
telnet/old/: main.ts  t2.ts
telnet/util/: dev.ts  ipcHandler.ts  telnetTypes.ts  types.ts
